# digcrate

./: HOW-IT-WORKS.md  README.md  pyproject.toml
.github/workflows/: deploy-site.yml  release-macos.yml
DeepCrateMac/: Package.swift  README.md
DeepCrateMac/Sources/DeepCrateMac/App/: DeepCrateMacApp.swift  RootView.swift
DeepCrateMac/Sources/DeepCrateMac/Core/: AppRuntime.swift  AppSettings.swift  AppState.swift  AudioPreviewPlayer.swift  BackendClient.swift  ExportService.swift  LibraryAnalysisService.swift  LiquidGlass.swift  LocalDatabase.swift  Models.swift  OpenAISetPlanner.swift  PlanningService.swift
DeepCrateMac/Sources/DeepCrateMac/Features/Discover/: DiscoverView.swift
DeepCrateMac/Sources/DeepCrateMac/Features/Export/: ExportView.swift
DeepCrateMac/Sources/DeepCrateMac/Features/Gaps/: GapsView.swift
DeepCrateMac/Sources/DeepCrateMac/Features/Plan/: PlanView.swift
DeepCrateMac/Sources/DeepCrateMac/Features/Sets/: SetsView.swift
DeepCrateMac/Sources/DeepCrateMac/Features/Settings/: SettingsView.swift
DeepCrateMac/Tests/DeepCrateMacTests/: DeepCrateMacTests.swift
assets/branding/: DeepCrate.icns
deepcrate/: cli.py  db.py  mac_bridge.py  models.py
deepcrate/analysis/: analyzer.py
deepcrate/export/: m3u.py  rekordbox.py
deepcrate/gui/: __init__.py  app.py  services.py  worker.py
deepcrate/planning/: planner.py
digcrate/gui/: services.py
scripts/: build-macos-icon.sh  package-macos-app.sh
tests/: test_analyzer.py  test_planner.py
website/: index.html
