[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepcrate"
version = "0.1.0"
description = "AI-powered DJ set builder"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "mutagen>=1.47.0",
    "openai>=1.0.0",
    "spotipy>=2.23.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.26.0",
    "PySide6>=6.8.0",
]

[project.scripts]
deepcrate = "deepcrate.cli:app"
deepcrate-gui = "deepcrate.gui.app:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
